# codelens-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROGRESS.md  Project-Tracking.md  README.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  analyzer.py  config.py  optimizer.py  reporter.py
tests/: test_analyzer.py  test_optimizer.py
